# serializer version: 1
# name: TestHistoricalExports.test_historical_export_metrics
  '''
  
  SELECT groupArray(date),
         groupArray(successes),
         groupArray(successes_on_retry),
         groupArray(failures)
  FROM
    (SELECT date, sum(CASE
                          WHEN category = 'composeWebhook' THEN 0
                          ELSE successes
                      END) AS successes,
                  sum(successes_on_retry) AS successes_on_retry,
                  sum(failures) AS failures
     FROM
       (SELECT category,
               dateTrunc('hour', timestamp, 'UTC') AS date,
               sum(successes) AS successes,
               sum(successes_on_retry) AS successes_on_retry,
               sum(failures) AS failures
        FROM app_metrics
        WHERE team_id = 2
          AND plugin_config_id = 3
          AND category = 'exportEvents'
          AND job_id = '1234'
          AND timestamp >= '2021-08-25 00:00:00'
          AND timestamp < '2021-08-25 06:00:00'
        GROUP BY dateTrunc('hour', timestamp, 'UTC'),
                 category)
     GROUP BY date
     ORDER BY date WITH FILL
     FROM dateTrunc('hour', toDateTime('2021-08-25 00:00:00'), 'UTC') TO dateTrunc('hour', toDateTime('2021-08-25 06:00:00') + toIntervalHour(1), 'UTC') STEP 3600)
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.1
  '''
  
  SELECT error_type,
         count() AS count,
         max(timestamp) AS last_seen
  FROM app_metrics
  WHERE team_id = 2
    AND plugin_config_id = 3
    AND category = 'exportEvents'
    AND job_id = '1234'
    AND timestamp >= '2021-08-25 00:00:00'
    AND timestamp < '2021-08-25 06:00:00'
    AND error_type <> ''
  GROUP BY error_type
  ORDER BY count DESC
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.2
  '''
  SELECT "clairview_activitylog"."id",
         "clairview_activitylog"."team_id",
         "clairview_activitylog"."organization_id",
         "clairview_activitylog"."user_id",
         "clairview_activitylog"."was_impersonated",
         "clairview_activitylog"."is_system",
         "clairview_activitylog"."activity",
         "clairview_activitylog"."item_id",
         "clairview_activitylog"."scope",
         "clairview_activitylog"."detail",
         "clairview_activitylog"."created_at"
  FROM "clairview_activitylog"
  WHERE ("clairview_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("clairview_activitylog"."detail" #> '{trigger,job_id}') = '"1234"'::jsonb
         AND ("clairview_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "clairview_activitylog"."item_id" = '3'
         AND "clairview_activitylog"."scope" = 'PluginConfig'
         AND "clairview_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.3
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export
  '''
  SELECT "clairview_activitylog"."id",
         "clairview_activitylog"."team_id",
         "clairview_activitylog"."organization_id",
         "clairview_activitylog"."user_id",
         "clairview_activitylog"."was_impersonated",
         "clairview_activitylog"."is_system",
         "clairview_activitylog"."activity",
         "clairview_activitylog"."item_id",
         "clairview_activitylog"."scope",
         "clairview_activitylog"."detail",
         "clairview_activitylog"."created_at"
  FROM "clairview_activitylog"
  WHERE ("clairview_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("clairview_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "clairview_activitylog"."item_id" = '3'
         AND "clairview_activitylog"."scope" = 'PluginConfig'
         AND "clairview_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export.1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export
  '''
  SELECT "clairview_activitylog"."id",
         "clairview_activitylog"."team_id",
         "clairview_activitylog"."organization_id",
         "clairview_activitylog"."user_id",
         "clairview_activitylog"."was_impersonated",
         "clairview_activitylog"."is_system",
         "clairview_activitylog"."activity",
         "clairview_activitylog"."item_id",
         "clairview_activitylog"."scope",
         "clairview_activitylog"."detail",
         "clairview_activitylog"."created_at"
  FROM "clairview_activitylog"
  WHERE ("clairview_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("clairview_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "clairview_activitylog"."item_id" = '3'
         AND "clairview_activitylog"."scope" = 'PluginConfig'
         AND "clairview_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export.1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export
  '''
  SELECT "clairview_activitylog"."id",
         "clairview_activitylog"."team_id",
         "clairview_activitylog"."organization_id",
         "clairview_activitylog"."user_id",
         "clairview_activitylog"."was_impersonated",
         "clairview_activitylog"."is_system",
         "clairview_activitylog"."activity",
         "clairview_activitylog"."item_id",
         "clairview_activitylog"."scope",
         "clairview_activitylog"."detail",
         "clairview_activitylog"."created_at"
  FROM "clairview_activitylog"
  WHERE ("clairview_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("clairview_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "clairview_activitylog"."item_id" = '3'
         AND "clairview_activitylog"."scope" = 'PluginConfig'
         AND "clairview_activitylog"."team_id" = 2)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.2
  '''
  SELECT "clairview_pluginstorage"."id",
         "clairview_pluginstorage"."plugin_config_id",
         "clairview_pluginstorage"."key",
         "clairview_pluginstorage"."value"
  FROM "clairview_pluginstorage"
  WHERE ("clairview_pluginstorage"."key" = 'EXPORT_COORDINATION'
         AND "clairview_pluginstorage"."plugin_config_id" = 2)
  ORDER BY "clairview_pluginstorage"."id" ASC
  LIMIT 1
  '''
# ---
